--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -5,5 +5,7 @@
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
         <item name="colorPrimary">#002DE3</item>
         <item name="colorPrimaryVariant">#002DE3</item>
+        <item name="fontFamily">@font/mulish</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
