--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,17 +59,111 @@
         android:layout_height="50dp"
         app:cardCornerRadius="30dp"
         app:cardElevation="0dp"
+        app:cardBackgroundColor="#0000FFFF"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         android:clickable="true"
+        android:id="@+id/cardBack"
         android:foreground="?attr/selectableItemBackgroundBorderless"
         android:layout_marginLeft="15dp">
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_gravity="center"
+            android:id="@+id/cardBackImage"
             android:src="@drawable/back"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        app:cardBackgroundColor="#0000FFFF"
+        app:cardElevation="0dp"
+        app:layout_constraintTop_toBottomOf="@id/illustration"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-80dp"
+        android:id="@+id/cardContinue">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <EditText
+                android:layout_width="300dp"
+                android:layout_height="45dp"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:maxLength="55"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:id="@+id/emailEditText"
+                android:background="@drawable/edittext"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:hint="Email or Phone no."
+                android:textSize="14sp"/>
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="300dp"
+                android:layout_height="60dp"
+                android:text="Continue"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@id/emailEditText"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginTop="30dp"
+                android:id="@+id/buttonContinue"
+                android:textColor="@color/white"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/buttonContinue"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginTop="40dp"
+                android:orientation="horizontal"
+                android:id="@+id/layoutSeprator">
+                <androidx.cardview.widget.CardView
+                    android:layout_width="90dp"
+                    android:layout_height="0.5dp"
+                    app:cardElevation="0dp"
+                    android:layout_marginTop="6dp"
+                    app:cardBackgroundColor="#343434"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="    OR    "
+                    android:textSize="8dp"
+                    android:textColor="#343434"/>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="90dp"
+                    android:layout_height="0.5dp"
+                    android:layout_marginTop="6dp"
+                    app:cardElevation="0dp"
+                    app:cardBackgroundColor="#343434"/>
+            </LinearLayout>
+            <androidx.cardview.widget.CardView
+                android:layout_width="300dp"
+                android:layout_height="55dp"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="5dp"
+                app:layout_constraintTop_toBottomOf="@id/layoutSeprator"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginTop="40dp">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/google"
+                    android:layout_gravity="center_vertical|start"
+                    android:layout_marginStart="20dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Continue with Google"
+                    android:textStyle="bold"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"/>
+            </androidx.cardview.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
 
