--- a/app/src/main/res/drawable/edittext_night.xml
+++ b/app/src/main/res/drawable/edittext_night.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="#152033"/>
+        android:color="#212834"/>
     <corners android:radius="10dp"/>
-</selector>
+</shape>
