--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/white"
+    android:id="@+id/parent">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -79,6 +81,7 @@
         android:layout_width="match_parent"
         app:cardBackgroundColor="#0000FFFF"
         app:cardElevation="0dp"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/illustration"
         android:layout_height="wrap_content"
         android:layout_marginTop="-80dp"
@@ -348,5 +351,71 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/illustration"
+        app:cardElevation="0dp"
+        android:layout_marginTop="-50dp"
+        android:visibility="gone"
+        android:id="@+id/cardLogin"
+        app:cardBackgroundColor="#0000FFFF">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <EditText
+                android:layout_width="300dp"
+                android:layout_height="45dp"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:maxLength="55"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:id="@+id/emailText"
+                android:background="@drawable/edittext"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:hint="Password"
+                android:textSize="14sp"/>
+            <EditText
+                android:layout_width="300dp"
+                android:layout_height="45dp"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:layout_marginTop="14dp"
+                android:maxLength="55"
+                app:layout_constraintTop_toBottomOf="@id/emailText"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:id="@+id/passwordText"
+                android:background="@drawable/edittext"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:hint="Confirm Password"
+                android:textSize="14sp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Forgot Password?"
+                android:textColor="#002DE3"
+                app:layout_constraintTop_toBottomOf="@id/passwordText"
+                app:layout_constraintRight_toRightOf="@id/passwordText"
+                android:layout_marginTop="15dp"
+                android:textStyle="bold"
+                android:id="@+id/forgotPassText"/>
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="300dp"
+                android:layout_height="60dp"
+                android:text="Continue"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@id/forgotPassText"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginTop="30dp"
+                android:id="@+id/loginBtn"
+                android:textColor="@color/white"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
