--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -377,7 +377,7 @@
                 android:background="@drawable/edittext"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
-                android:hint="Password"
+                android:hint="Email or Phone no."
                 android:textSize="14sp"/>
             <EditText
                 android:layout_width="300dp"
@@ -393,7 +393,7 @@
                 android:background="@drawable/edittext"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
-                android:hint="Confirm Password"
+                android:hint="Password"
                 android:textSize="14sp"/>
             <TextView
                 android:layout_width="wrap_content"
