--- a/app/src/main/res/layout/chat_items.xml
+++ b/app/src/main/res/layout/chat_items.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/left_chat"
+        android:layout_marginEnd="80dp"
         android:layout_alignParentStart="true"
         android:background="@drawable/left_chat">
         <TextView
@@ -23,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/right_chat"
+        android:layout_marginStart="80dp"
         android:layout_alignParentEnd="true"
         android:background="@drawable/right_chat">
         <TextView
