--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -201,7 +201,7 @@
             android:layout_height="40dp"
             app:cardCornerRadius="20dp"
             app:cardElevation="0dp"
-            android:id="@+id/closeSetiings"
+            android:id="@+id/closeSettings"
             app:strokeWidth="1dp"
             app:strokeColor="#ADADAD"
             app:cardBackgroundColor="#0000FFFF"
@@ -211,6 +211,7 @@
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
+                android:id="@+id/closeSettingsIcon"
                 android:src="@drawable/close"
                 android:layout_gravity="center" />
         </com.google.android.material.card.MaterialCardView>
