--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -307,20 +307,7 @@
         android:id="@+id/cardSplash"
         android:visibility="gone"
         android:layout_height="match_parent">
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:cardBackgroundColor="#0000FFFF"
-            app:cardElevation="0dp"
-            android:id="@+id/cogwheel"
-            android:layout_gravity="center">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
 
-                android:src="@drawable/logoback"/>
-        </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
@@ -330,11 +317,26 @@
             android:id="@+id/cardAi"
             android:layout_gravity="center">
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/logofront"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:src="@mipmap/logo"
                 android:layout_gravity="center"/>
         </androidx.cardview.widget.CardView>
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:progressTint="@color/primary"
+            android:progressBackgroundTint="@color/primary"
+            android:foregroundTint="@color/primary"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginBottom="100dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Loading"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginBottom="70dp"
+            android:textSize="20sp"/>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -418,5 +420,64 @@
                 android:id="@+id/loginBtn"
                 android:textColor="@color/white"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
+        android:layout_width="250dp"
+        android:layout_height="300dp"
+        android:id="@+id/internetCard"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="200dp">
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/no_internet"
+            android:layout_gravity="center"
+            android:layout_marginBottom="50dp"/>
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            app:cardCornerRadius="30dp"
+            app:strokeColor="@color/primary"
+            app:cardBackgroundColor="#0000FFFF"
+            app:cardElevation="0dp"
+            android:id="@+id/cancel_internet"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:layout_gravity="bottom|center|center_horizontal"
+            android:layout_marginBottom="70dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cancel"
+                android:textColor="@color/primary"
+                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:textSize="14sp"/>
+        </com.google.android.material.card.MaterialCardView>
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            app:cardCornerRadius="30dp"
+            app:cardBackgroundColor="@color/primary"
+            app:cardElevation="0dp"
+            android:id="@+id/retry_internet"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            app:strokeColor="#0000FFFF"
+            android:layout_gravity="bottom|center|center_horizontal"
+            android:layout_marginBottom="20dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Retry"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:textSize="14sp"/>
+        </com.google.android.material.card.MaterialCardView>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
