--- a/app/src/main/res/layout/activity_reading_mode.xml
+++ b/app/src/main/res/layout/activity_reading_mode.xml
@@ -101,9 +101,28 @@ Connect easily with your family and friends over countries"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_gravity="center">
+                <androidx.cardview.widget.CardView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/copyContent"
+                    app:cardCornerRadius="20dp"
+                    app:cardElevation="0dp"
+                    app:cardBackgroundColor="#0000FFFF"
+                    android:clickable="true"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="20dp"
+                    android:foreground="?attr/selectableItemBackgroundBorderless"
+                    android:focusable="true">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/copy_content"
+                        android:layout_gravity="center"/>
+                </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:id="@+id/colorPicker"
                 app:cardCornerRadius="20dp"
                 app:cardElevation="0dp"
                 app:cardBackgroundColor="#0000FFFF"
@@ -125,6 +144,7 @@ Connect easily with your family and friends over countries"
                 android:layout_gravity="center"
                 android:layout_marginStart="20dp"
                 app:cardElevation="0dp"
+                android:id="@+id/textSize"
                 app:cardBackgroundColor="#0000FFFF"
                 android:clickable="true"
                 android:foreground="?attr/selectableItemBackgroundBorderless">
@@ -134,14 +154,14 @@ Connect easily with your family and friends over countries"
                     android:src="@drawable/text_size"
                     android:layout_gravity="center"/>
             </androidx.cardview.widget.CardView>
-                <com.google.android.material.card.MaterialCardView
+                <androidx.cardview.widget.CardView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     app:cardCornerRadius="20dp"
                     android:layout_gravity="center"
                     android:layout_marginStart="20dp"
                     app:cardElevation="0dp"
-                    app:strokeColor="#808080"
+                    android:id="@+id/shareContent"
                     app:cardBackgroundColor="#0000FFFF"
                     android:clickable="true"
                     android:layout_marginEnd="20dp"
@@ -149,9 +169,9 @@ Connect easily with your family and friends over countries"
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/close_extra"
+                        android:src="@drawable/share"
                         android:layout_gravity="center"/>
-                </com.google.android.material.card.MaterialCardView>
+                </androidx.cardview.widget.CardView>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
